--- a/my-news/src/styles/categories.css
+++ b/my-news/src/styles/categories.css
@@ -10,11 +10,26 @@ th {
     background-color: lightgray;
 }
 
-table{
-    width: 100%;
+.t_categories{
+    width: 50%;
     margin-bottom: 34px;
 }
-h2{
+
+h2 {
     border-bottom: solid;
     border-width: 1px;
+}
+
+.buttonCategory {
+    width: 78px;
+}
+
+.centrada {
+    display: flex;
+    justify-content: space-around;
+}
+
+#b_category {
+    margin-left: 642px;
+    width: 200px;
 }
