--- a/my-news/src/styles/homeCart.css
+++ b/my-news/src/styles/homeCart.css
@@ -1,4 +1,4 @@
-.cart{
+/* .cart{
     display: block;
     width: 600px;
     height: 600px;
@@ -7,4 +7,27 @@
     display: inline;
     width: 220px;
     height: 200px;
-}
+} */
+
+.home-card {
+    display: grid;
+    grid-template-rows: 200px auto;
+    justify-items: center;
+    align-items: center;
+    border: 1px solid gray;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .home-card img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .home-card h3 {
+    margin: 0;
+  }
+  
+  .home-card p {
+    margin: 10px 0;
+  }
